override security for individual contract routes
