# http4k-contract/src/test/resources/org/http4k/contract/OpenApiTest.json
@@ -260,6 +260,23 @@
         ]
       }
     },
+    "/basepath/security": {
+      "post": {
+        "tags": [
+          "/basepath"
+        ],
+        "summary": "<unknown>",
+        "produces": [],
+        "consumes": [],
+        "parameters": [],
+        "responses": {},
+        "security": [
+          {
+            "basicAuth": []
+          }
+        ]
+      }
+    },
     "/basepath/body_form": {
       "post": {
         "tags": [
